   - BatTreeview: add a Notes indicator (todo #1157).
   - ClassPage: add a Notes indicator (todo #1157).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - CurrencyPage: make the treeview sortable.
   - LedgerPage: add a Notes indicator (todo #1157).
   - OpeTemplateFrame: add a Notes indicator (todo #1157).
   - RecurrentManagePage: add a Notes indicator (todo #1157).
   - VATManagePage: add a Notes indicator (todo #1157).

 Bug fixes:

   - ImporterPdfBoursorama: fix import when more than one page (todo #1173).
   - GuidedInput: take into account the user set ledger (todo #1152).
   - RecurrentManagePage: remove extraneous button spacer.
   - RecurrentRun: fix validation status recording (todo #1176).
   - SettlementPage: fix column header (todo #1148).
   - Style: fix selector change introduced with Gtk 3.20 (todo #1171).

 Other changes:

   - myStyle: new style management class.
   - ofa.css: remove obsolete styles.

-----------------------------------------------------------------------
 Version 0.58
 ============

 Released on 2016-06-26
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - RecurrentOperation: make periodicity detail mandatory.
   - RecurrentManagement: improve detail column sort (todo #1146).
   - RecurrentManagement: generate operations on selected models (todo #1140).
   - UserPreferences: have a preference to edit date in overwrite mode (todo #707).
   - VAT: put its own icon on operation templates pages (todo #1138).
   - VAT: introduce the %BALANCE() function (todo #1158).
 
 Bug fixes:

   - Dossier: fix minimal effect date computing (todo #1144).
   - EntryPage: fix new entry insertion (todo #1133).
   - ReconciliationPage: fix debit vs. credit comparison (todo #1132).
   - RecurrentOperation: fix amount update on newly generated record (todo #1135).
   - RecurrentOperation: review index to allow many cancelled operations (todo #1137).