@@ -47,6 +47,7 @@
    - LedgerPage: add a Notes indicator (todo #1157).
    - OpeTemplateFrame: add a Notes indicator (todo #1157).
    - RecurrentManagePage: add a Notes indicator (todo #1157).
+   - StreamFormat: provides a default character set list (todo #1170).
    - VATManagePage: add a Notes indicator (todo #1157).
 
  Bug fixes:
